--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-    <p id="popupText"></p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Daily Operations</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<p id="popupText"></p>
     <button onclick="closePopup()">Close</button>
   </div>
 </div>
@@ -21,3 +28,6 @@
     <p>Library coming next.</p>
   </div>
 </div> 
+<script src="script.js"></script>
+</body>
+</html>
