--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Daily Operations</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <p id="popupText"></p>
@@ -28,6 +28,6 @@
     <p>Library coming next.</p>
   </div>
 </div> 
-<script src="script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
