--- a/index.html
+++ b/index.html
@@ -78,6 +78,61 @@ tasksDiv.appendChild(div)
 })
 function update(){document.getElementById("progress").innerText=done+"/"+total}
 update()
+  document.getElementById("date").innerText=new Date().toDateString()
+const todayKey=new Date().toDateString()
+let saved=JSON.parse(localStorage.getItem(todayKey))||{}
+
+const SOP={
+"Hydration":"Drink 500ml water",
+"Workout":"Follow training SOP",
+"Deep Work":"90 min focus",
+"Sleep":"Sleep on time"
+}
+
+const blocks=[
+{block:"Morning",tasks:["Hydration","Workout"]},
+{block:"Work",tasks:["Deep Work"]},
+{block:"Night",tasks:["Sleep"]}
+]
+
+let total=0,done=0
+const tasksDiv=document.getElementById("tasks")
+
+blocks.forEach(b=>{
+const div=document.createElement("div")
+div.className="card"
+div.innerHTML="<h2>"+b.block+"</h2>"
+
+b.tasks.forEach(t=>{
+total++
+const checked=saved[t]?"checked":""
+if(saved[t])done++
+
+const label=document.createElement("label")
+label.className="task"
+label.innerHTML=`<input type="checkbox" ${checked}> ${t}`
+
+label.querySelector("input").onclick=(e)=>e.stopPropagation()
+label.onclick=()=>openPopup(t)
+
+label.querySelector("input").onchange=e=>{
+saved[t]=e.target.checked||undefined
+localStorage.setItem(todayKey,JSON.stringify(saved))
+done=e.target.checked?done+1:done-1
+update()
+}
+
+div.appendChild(label)
+})
+
+tasksDiv.appendChild(div)
+})
+
+function update(){
+document.getElementById("progress").innerText=done+"/"+total
+}
+
+update()
 function show(s){["flow","dashboard","manual"].forEach(x=>document.getElementById(x+"Screen").classList.add("hidden"));document.getElementById(s+"Screen").classList.remove("hidden");dash()}
 function dash(){let p=Math.round(done/total*100)||0;document.getElementById("todayPercent").innerText=p+"%";document.getElementById("tasksToday").innerText=done;let h=JSON.parse(localStorage.getItem("history"))||{};if(p==100){h[todayKey]=1;localStorage.setItem("history",JSON.stringify(h))};let days=Object.keys(h);document.getElementById("totalDays").innerText=days.length;document.getElementById("streak").innerText=days.length+" days"}
 function openPopup(t){document.getElementById("popupTitle").innerText=t;document.getElementById("popupText").innerText=SOP[t]||"Instruction coming soon";document.getElementById("popup").classList.remove("hidden")}
